# landgriffon_mktp

./: .gitignore  LICENSE  README.md  docker-compose.yml  tail_log.sh
backend/: Dockerfile  alembic.ini  config.py  env.sample  pyproject.toml  requirements.txt  test.py
backend/alembic/: env.py
backend/alembic/versions/: 2530955b6a64_initial_migration.py  3a745162e505_initial_migration.py
backend/app/: database.py  logging_config.py  main.py  models.py  pubsub.py
backend/app/routers/: router.py  subscriptions.py
backend/templates/: base.html  failure.html  success.html  thanks.html
frontend/: Dockerfile
