[tool.poetry]
name = "landgriffon-mktp"
version = "0.1.0"
description = "landgriffon marketplace subscription app"
authors = ["Miguel Mendozo <miguel.mendoza@vizzuality.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
google-cloud-pubsub = "^2.21.3"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
